3.1.1/_sources/gallery/pyplots/whats_new_98_4_fill_between.rst.txt
.. note::
    :class: sphx-glr-download-link-note

    Click :ref:`here <sphx_glr_download_gallery_pyplots_whats_new_98_4_fill_between.py>` to download the full example code
.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_pyplots_whats_new_98_4_fill_between.py:


============
Fill Between
============

Fill the area between two curves.


.. code-block:: default

    import matplotlib.pyplot as plt
    import numpy as np

    x = np.arange(-5, 5, 0.01)
    y1 = -5*x*x + x + 10
    y2 = 5*x*x + x

    fig, ax = plt.subplots()
    ax.plot(x, y1, x, y2, color='black')
    ax.fill_between(x, y1, y2, where=y2 >y1, facecolor='yellow', alpha=0.5)
    ax.fill_between(x, y1, y2, where=y2 <=y1, facecolor='red', alpha=0.5)
    ax.set_title('Fill Between')

    plt.show()




.. image:: /gallery/pyplots/images/sphx_glr_whats_new_98_4_fill_between_001.png
    :class: sphx-glr-single-img





------------

References
""""""""""

The use of the following functions, methods, classes and modules is shown
in this example:


.. code-block:: default


    import matplotlib
    matplotlib.axes.Axes.fill_between




.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    <function Axes.fill_between at 0x7ffb5808d320>




.. _sphx_glr_download_gallery_pyplots_whats_new_98_4_fill_between.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download

     :download:`Download Python source code: whats_new_98_4_fill_between.py <whats_new_98_4_fill_between.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: whats_new_98_4_fill_between.ipynb <whats_new_98_4_fill_between.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
